version/1.0.0rc2/_sources/_autosummary/ansys.dynamicreporting.core.Item.rst.txt
Item
====

.. currentmodule:: ansys.dynamicreporting.core

.. autoclass:: Item

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      Item.add_tag
      
      
      Item.get_iframe
      
      
      Item.get_tags
      
      
      Item.rem_tag
      
      
      Item.set_tags
      
      
      Item.visualize
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Item.url
      Item.item_text
      Item.item_image
      Item.item_scene
      Item.item_animation
      Item.item_table
      Item.format
      Item.format_column
      Item.labels_column
      Item.format_row
      Item.labels_row
      Item.plot
      Item.title
      Item.line_color
      Item.line_marker
      Item.line_marker_text
      Item.marker_text_rowname
      Item.line_marker_size
      Item.line_marker_opacity
      Item.line_marker_scale
      Item.line_error_bars
      Item.line_marker_aux0
      Item.line_marker_aux1
      Item.line_marker_aux2
      Item.line_marker_aux3
      Item.line_marker_aux4
      Item.line_marker_aux5
      Item.line_marker_aux6
      Item.line_marker_aux7
      Item.line_marker_aux8
      Item.line_marker_aux9
      Item.column_minimum
      Item.column_maximum
      Item.line_style
      Item.line_width
      Item.stacked
      Item.bar_mode
      Item.xaxis
      Item.yaxis
      Item.zaxis
      Item.palette
      Item.palette_position
      Item.palette_range
      Item.palette_show
      Item.palette_title
      Item.histogram_threshold
      Item.histogram_cumulative
      Item.histogram_normalized
      Item.histogram_bin_size
      Item.bar_gap
      Item.width
      Item.height
      Item.show_legend
      Item.legend_position
      Item.show_legend_border
      Item.show_border
      Item.plot_margins
      Item.plot_title
      Item.plot_xaxis_type
      Item.plot_yaxis_type
      Item.plot_zaxis_type
      Item.xrange
      Item.yrange
      Item.zrange
      Item.xaxis_format
      Item.yaxis_format
      Item.zaxis_format
      Item.xtitle
      Item.ytitle
      Item.ztitle
      Item.xaxis_tick_delta
      Item.yaxis_tick_delta
      Item.zaxis_tick_delta
      Item.item_justification
      Item.nan_display
      Item.table_sort
      Item.table_title
      Item.align_column
      Item.table_search
      Item.table_page
      Item.table_pagemenu
      Item.table_scrollx
      Item.table_scrolly
      Item.table_bordered
      Item.table_condensed
      Item.table_wrap_content
      Item.table_wrap_word
      Item.table_default_col_labels
      Item.table_cond_format
      Item.row_tags
      Item.col_tags
   
   